# rust-playground

error-log-publisher/: .env.template  Cargo.toml
error-log-publisher/src/: main.rs
log-error/: .env.template  Cargo.toml
log-error/src/: main.rs
service-logger/: Cargo.toml
service-logger/src/: console_logger.rs  file_logger.rs  lib.rs  redis_log_message.rs
service-logger/src/loggers/: console_logger.rs  mod.rs  redis_logger.rs
