[package]
name = "service-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.16"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
crossbeam = "0.8"
redis = "0.22"
bincode = "1.3"
base64 = "0.20"
thiserror = "1.0"
